[gd_scene load_steps=10 format=3 uid="uid://dj2hqj4x1ve7p"]

[ext_resource type="Script" uid="uid://xn74e85fxj2k" path="res://Scenes/GUI/item_selector.gd" id="1_ml80v"]
[ext_resource type="Texture2D" uid="uid://duu13dsov6vp5" path="res://Assets/Images/GUI/main_gui.png" id="2_e3iru"]
[ext_resource type="AudioStream" uid="uid://cnm2dt4saa1dq" path="res://Assets/Sounds/SE/slide1.ogg" id="2_ptgna"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ptgna"]
atlas = ExtResource("2_e3iru")
region = Rect2(933, 285, 64, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfw0k"]
atlas = ExtResource("2_e3iru")
region = Rect2(933, 350, 64, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvxhp"]
atlas = ExtResource("2_e3iru")
region = Rect2(933, 414, 64, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6ixw"]
atlas = ExtResource("2_e3iru")
region = Rect2(1039, 285, 64, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggre1"]
atlas = ExtResource("2_e3iru")
region = Rect2(1039, 350, 64, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra1rh"]
atlas = ExtResource("2_e3iru")
region = Rect2(1039, 414, 64, 57)

[node name="ItemSelector" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ml80v")
slide_fx = ExtResource("2_ptgna")

[node name="Separator0" type="Control" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PreviousItem" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 1
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_ptgna")
texture_hover = SubResource("AtlasTexture_xfw0k")
texture_disabled = SubResource("AtlasTexture_uvxhp")

[node name="Separator1" type="Control" parent="."]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Canvas" type="Control" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Separator2" type="Control" parent="."]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="NextItem" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_mode = 1
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_t6ixw")
texture_hover = SubResource("AtlasTexture_ggre1")
texture_disabled = SubResource("AtlasTexture_ra1rh")

[node name="MainFormatLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="PreviousItem" to="." method="_on_previous_item_pressed"]
[connection signal="pressed" from="NextItem" to="." method="_on_next_item_pressed"]
